--- a/szablon/style.css
+++ b/szablon/style.css
@@ -1,83 +1,92 @@
 body {
-	font-family: Verdana, 'Trebuchet MS', Arial, Helvetica, sans-serif;
-	font-size: 15px;
-	color: black;  
-	margin: 0; 
-  padding: 0;
-	height:100%;
-  width:100%;
+	  font-family: Verdana, 'Trebuchet MS', Arial, Helvetica, sans-serif;
+	  font-size: 15px;
+	  color: black;  
+  	margin: 0; 
+    padding: 0;
+	  height:100%;
+    width:100%;
 }
 
 
 #all{
-  width: 1000px;
-  margin: 1px auto;
-  position:relative;      
-  /*background: rgba(0,0,0, 0.50);*/       
+    width: 1000px;
+    margin: 1px auto;
+    position:relative;         
 }
 
 /**********   top   ****************/
 
 #naglowek{
-  width: 100%;
-  clear: none;
-  text-align:center; 
-  display: block;
-  padding-top: 10px;  
-  top: 10px;   
-  font-size: 20px; 
-  border-bottom:   4px solid blue;         
+    width: 100%;
+    clear: none;
+    text-align:center; 
+    display: block;
+    padding-top: 10px;  
+    top: 10px;  
+    color: blue;
+    border-bottom: 4px solid blue; 
+    font-size: 50px;
+    font-family: garamond, times, 'times new roman', serif;
+    font-variant: small-caps;      
 }
 
 #a_menu {
- color:white;
+    color:white;
+}
+
+#menu_dodaj, #menu_notatki{   
+    background-color: blue;
+    border: 4px solid black;
+    color: black;
+    width: 90%;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 15px;
+    margin: 20px;
 }
 
 #menu{   
-  background-color: black;
-  border-top: 4px solid blue; 
-  clear: none;
-  color: white;
-  width: 40%;
-  font-size: 18px;
-  text-align: center;
-  border-radius: 15px;
+    position: relative; 
+    clear: both;
+    width: 100%;
+    table-layout: fixed;
+    text-align: center;  
 }
+
 
 /*******************************/
 
 p {
-  text-align: justify;
-  margin: 20px;
+    text-align: justify;
+    margin: 20px;
 }
 
 a{
-  color:black;
-  text-decoration: none;
+    color:black;
+    text-decoration: none;
 } 
 
 a:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 
 ul {
-  list-style-type:none; 
+    list-style-type:none; 
 }
 
 
 /**************  stopka  ******************/
 #koniec{
     clear: both;
-    width: 956px;
-   // background-color: white;
+    width: 1000px;
     border-top: 1px solid blue;
     display: block;
     padding-bottom: 3px;
     margin-top: 20px;
     bottom: 0;
     text-align: center; 
-  //    background: rgba(0,0,0, 0.70);
 }
 
 
@@ -89,37 +98,28 @@ ul {
     width:50%;
 	  text-align: center;
     border: 3px solid blue;
-    background-color:paleturquoise;//powderblue;
+    background-color:	white;
     box-shadow:  5px 0 10px 7px;
 }   
 
-#a_edytuj{
-  color: white;
-}
-#a_usun{
-  color: white;
-}
+#a_edytuj, #a_usun{
+    color:white;
+} 
 
-#edytuj{
+#edytuj, #usun{
     float: right;            
-    background-color: dodgerblue;
-    border: 2px solid blue;
+    background-color: blue;
+    border: 3px solid black;
     width:60px;
     border-radius: 15px;
-
 }
 
 #usun{
-    float: right;
-    background-color: dodgerblue;
-    border: 2px solid blue;
     width:50px;
-    border-radius: 15px;
-
 }
 
 #data{
-    border-bottom: 1px solid blue;
+    border-bottom: 1px solid black;
 }
 
 
@@ -127,7 +127,6 @@ ul {
 
 #dodaj{
     float: right;   
-    background-color: dodgerblue;
     border: 2px solid blue;
     width:70px;
     border-radius: 15px;
@@ -139,10 +138,9 @@ ul {
     margin: 50px auto 50px auto;
     width:70%;
 	  text-align: justify;
-    border: 1px solid blue;
-    background-color:paleturquoise;
+    border: 2px solid blue;
     box-shadow:  5px 0 10px 7px;
-    -moz-box-shadow: 5px 0 20px 10px; /*by  cień wyświetlał się w starszych przeglądarkach Firefoxa*/
+    -moz-box-shadow: 5px 0 20px 10px; 
     -webkit-box-shadow: 5px 0 20px 10px;
 }  
 
@@ -154,5 +152,5 @@ ul {
 }
 
 #przycisk{
-     font-size: 17px;
+    font-size: 17px;
 }
